@@ -1,5 +1,9 @@
 2002-09-10  Marcus Brinkmann  <marcus@gnu.org>
 
+	* hurdio.c (hurdio_writer_loop): Check output_stopped instead termflags.
+	Move the code that signals the underlying file to ...
+	(hurdio_start_output): ... here.
+
 	* munge.c (input_character): Really toggle USER_OUTPUT_SUSP if
 	VSTART == VSTOP.
 
